test/parallel/forall/may-vs-must-par/expr-mustpar-loop-err-iter2SA.good
expr-mustpar-loop-err-iter2SA.chpl.chpl:8: error: A leader iterator is not found for the iterable expression in this forall loop
